--- a/templates/buy_product.html
+++ b/templates/buy_product.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% block title%}Купить{% endblock %}
 {% block content %}
-    <h1>Купить {{ product.name }}</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Купить</button>
-    </form>
+    <div class="container">
+        <h1>Купить {{ product.name }}</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Купить</button>
+        </form>
+    </div>
 {% endblock %}
